src/objects/TestTask__c.object
<CustomObject>
    <description>タスク管理テスト</description>
    <fields>
        <fullName>Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>タスク担当者</description>
        <label>担当者</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TaskUserRelation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>タスクの終了日</description>
        <label>終了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Progress__c</fullName>
        <description>タスクの進捗率</description>
        <label>進捗率</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>タスク開始日</description>
        <label>開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TestTaskMsg__c</fullName>
        <label>タスク内容</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestTask__c</fullName>
        <label>テストプロジェクトタスク</label>
        <referenceTo>TestProjectMst__c</referenceTo>
        <relationshipLabel>テストタスク</relationshipLabel>
        <relationshipName>TestTaskRelation</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>テストタスク</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>テストタスクＩＤ</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>